Fix that images on mobile were cut if too wide
Images in the text are now scaled to fit the screen width
if their original size is longer than the screen.

--- a/resources/files/style/default.css
+++ b/resources/files/style/default.css
@@ -164,6 +164,10 @@ strong, b {
     margin-top: 0;
 }
 
+.Text img {
+    max-width: 100%;
+}
+
 .OptionsContainer {
     text-align: center;
     margin-top: 20px;
